# Pet-Projects

./: README.md
assistant_console/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
assistant_console/pa_quadro/: main.py
assistant_console/pa_quadro/source/: birthdays.py  classes.py  constants.py  functions.py  search_contacts.py  search_notes.py
assistant_console/src/personal_assistant/: __init__.py  assistant.py
assistant_console/src/personal_assistant/mods/: fields.py  handler.py  log_config.py  logic.py  sorter.py
assistant_web/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  readme.txt
assistant_web/assistant/: .env.example  data.json  manage.py  timer.py
assistant_web/assistant/assistant/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
assistant_web/assistant/contacts/: forms.py  models.py  urls.py  views.py
assistant_web/assistant/contacts/migrations/: 0001_initial.py  0002_contact_created_date_contact_thurname_contact_user_and_more.py
assistant_web/assistant/docs/: conf.py  forms.py  models.py  urls.py  views.py
assistant_web/assistant/docs/migrations/: 0001_initial.py
assistant_web/assistant/news/: context_processors.py  models.py  scrap_news.py  urls.py  views.py
assistant_web/assistant/news/migrations/: 0001_initial.py  0002_alter_news_title.py  0002_topic_alter_news_published_at_news_topic.py  0003_alter_news_topic.py  0004_alter_news_topic_delete_topic.py  0005_rename_description_news_content.py  0006_rename_published_at_news_date.py  (+2 more)
assistant_web/assistant/notes/: forms.py  models.py  urls.py  views.py
assistant_web/assistant/users/: forms.py  urls.py  views.py
(+38 files in other folders)
